Fix first time setup not detecting the game even if the SDK is installed.