@@ -19,6 +19,13 @@ title: Version 1.10 > Minor
 This changelog will contain all changes from 1.10.0 onwards before the next major version.
 !!!
 
+==- Version 1.10.51
+Fix error when loading plugins before initializing the mainUI.
+Fix updater when not running in a venv.
+[!badge variant="dark" text="Tumppi066"] [!badge variant="ghost" text="App Backend"] [!badge variant="ghost" text="Updater"]
+!!!Note
+If you didn't install using the installer, then please run ´git pull´ in the app directory to update and fix the installer. 
+!!!
 ==- Version 1.10.50
 Fix first time setup not detecting the game even if the SDK is installed.
 [!badge variant="dark" text="Tumppi066"] [!badge variant="ghost" text="First Time Setup"]
