@@ -4,6 +4,7 @@ Stores all global variables for the program.
 import os
 import subprocess
 import ctypes
+import sys
 
 #region Variables
 PATH = os.path.dirname(__file__).replace("src", "")
@@ -43,6 +44,8 @@ FRAMECOUNTER = 0
 """The amount of frames that have passed since the program started."""
 WIKI_URL = "https://wiki.tumppi066.fi"
 """The url that will show when the wiki panel is opened"""
+IN_VENV = sys.prefix != sys.base_prefix
+"""Whether the program is running in a virtual environment or not."""
 #endregion
 
 #region Var Set Functions
